docs: 完善java.md